meta align fix

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -17,6 +17,7 @@
   .post_date{
     width:100%;
     display: block;
+    text-align: left;
   }
   .post_title{
     text-align:right;
